remove reduced stack size
related to https://github.com/elastic/elasticsearch/issues/9135
also sync JAVA_OPTS with current ES opts